# gBLP

./: DEV.md  README.md  flake.nix  flake.old  main.py  pyproject.toml  requirements.txt  win_poetry_build.bat  win_poetry_build_and_install.bat
basic_gRPC_implementation/: example_pb2_grpc.py  gpt.py
deprecated/basic_gRPC_implementation/: example.proto  example_pb2.py
examples/tickers/: crypto.json
gBLP/: 2server_gblp.py  EventHandler.py  EventRouter.py  bloomberg_pb2.py  bloomberg_pb2.py.bak  bloomberg_pb2_grpc.py  certMaker.py  client_gblp.py  client_old.py  constants.py  requestHelpers.py  responseParsers.py  server_gblp.py  test.py
gBLP/deprecated/: bbgfeeder.py
gBLP/examples/: historical_daily_polars_dataframe.py
gBLP/examples/tickers/: fx.json
gBLP/schemas/: schemas.json
gBLP/util/: EventHandler.py  certMaker.py  utils.py  validation.py
protos/: bloomberg.proto  make_protos.sh
tests/: client_test.py
