[tool.poetry]
name = "gblp"
version = "0.1.0"
description = "A project for working with Bloomberg and gRPC"
authors = ["Thomas Browne <your_email@example.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "gBLP" }]
keywords = ["gRPC", "Bloomberg", "Python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.10"
grpcio = "^1.68.0"
grpcio-tools = "^1.68.0"
ipython = "^8.29.0"
certifi = "^2024.8.30"
cryptography = "^43.0.3"
rich = "^13.9.4"
numpy = "^2.1.3"
pandas = "^2.2.3"
polars = "^1.14.0"
psutil = "^6.1.0"
pytest = "^8.3.3"

# Dependencies that need a special index
blpapi = { version = "^3.24.10", source = "bloomberg" }

[[tool.poetry.source]]
name = "bloomberg"
url = "https://blpapi.bloomberg.com/repository/releases/python/simple/"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.5.0", "setuptools>=42", "wheel"]
build-backend = "poetry.core.masonry.api"

